--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <h2 class="section-title">Contact Me</h2>
         <p>Email: dev580076@gmail.com</p>
         <p>Phone: +91 8587025878</p>
-        <p>LinkedIn: <a href="#" target="_blank">LinkedIn Profile</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/dev-sharma-developer/" target="_blank">LinkedIn Profile</a></p>
     </div>
 
     <!-- Footer -->
