--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
         <a href="#experience" class="btn btn-custom">Experience</a>
     </div>
 
+    <!-- About Section -->
+<div id="about" class="container">
+    <h2 class="section-title">About Me</h2>
+    <p>
+        Hello! I'm Dev Sharma, a passionate software developer with a keen interest in coding, technology, and problem-solving. 
+        I love building impactful projects, learning new technologies, and continuously challenging myself to grow as a developer.
+    </p>
+    <p>
+        When I'm not coding, you can find me exploring new business ideas, creating content for my YouTube channel, or learning new skills.
+    </p>
+</div>
+
+
     <!-- Projects Section -->
     <div id="projects" class="container">
         <h2 class="section-title">My Projects</h2>
